# picosnes

./: .gitignore  .gitmodules  Cargo.toml  README.md  pyproject.toml
bootapp/: Cargo.toml
bootapp/src/: irqs.rs  main.rs  psusb.rs
data/: 6502.yaml
host/: Cargo.toml
host/nes_emu/: Cargo.toml
host/nes_emu/src/: lib.rs  main.rs  nes.rs  nes_file.rs
host/nes_emu/src/components/: bus.rs  cpu_6502.rs  debug.rs  mem.rs  mod.rs  reset_controller.rs  signal.rs  tracer.rs
host/nes_emu/src/components/cpu/: mod.rs  opcodes.rs  ops.rs  sequences.rs
host/nes_emu/src/components/cpu/opcodes/: mod.rs  opcode_table.rs
host/nes_emu/src/components/cpu/ops/: mod.rs  op_impls.rs  test_helpers.rs
host/nes_emu/src/components/cpu/sequences/: actions.rs  mod.rs  sequence_tables.rs
host/nes_emu/tests/: test_roms.rs
pio_programs/: spiram.pio
tools/: cpu_data_gen.py  dump_cpu_cycles.py  dump_opcode_listing.py
tools/templates/: action_skeleton.rs.jinja2  op_skeleton.rs.jinja2  opcode_table.rs.jinja2  sequence_tables.rs.jinja2
tools/utils/: cpu_data.py
