[project]
name = "picosnes"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ast-grep-py>=0.39.5",
    "jinja2>=3.1.6",
    "pydantic-yaml>=1.6.0",
]

[build-system]
requires = ["uv_build>=0.8.17,<0.9.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "tools"
module-root = ""

[project.scripts]
cpu_data_gen = "tools.cpu_data_gen:main"
