[package]
name = "bootapp"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.5"
defmt = "1.0.1"
defmt-rtt = "1.0.0"
embassy-embedded-hal = { version = "0.4.0", features = ["defmt"] }
embassy-executor = { version = "0.8.0", features = [
    "arch-cortex-m",
    "defmt",
    "executor-thread",
] }
embassy-rp = { version = "0.7.0", features = [
    "defmt",
    "unstable-pac",
    "time-driver",
    "intrinsics",
    "rom-v2-intrinsics",
    "run-from-ram",
    "rp2040",
] }
embassy-time = { version = "0.4.0", features = ["defmt-timestamp-uptime-us"] }
embassy-usb = { version = "0.5.1", features = [
    "defmt",
    "max-handler-count-2",
    "max-interface-count-4",
] }
panic-probe = { version = "1.0.0", features = ["print-defmt"] }
portable-atomic = { version = "1.11.1", features = ["critical-section"] }
static_cell = "2.1.1"
